--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -30,7 +30,7 @@ $pd_big: 200px 0;
 $pd_medium: 110px 0;
 $pd_small: 40px 0;
 $pd_block: 70px 60px;
-$pd_nav: 45px 30px;
+$pd_nav: 45px 0;
 $pd_input: 14px 17px;
 $pd_button: 10px 20px;
 $pd_plate: 30px 20px;
