--- a/src/styles/_style.scss
+++ b/src/styles/_style.scss
@@ -192,6 +192,7 @@
     z-index: -1;
     background: radial-gradient(circle, rgb(211, 211, 211) 0%, rgb(234, 234, 234) 23%, rgba(255,255,255,1) 100%);
     // background: radial-gradient(circle, rgb(135, 173, 255) 0%, rgb(93, 112, 255) 27%, rgb(27, 34, 255) 100%);
+    // background-color: #202025;
     &__inner{
         opacity: 0.99;
         // background-color:rgb(200, 255, 238);
@@ -320,7 +321,7 @@ body{
         &__heading{
             position: sticky;
             left: 0;
-            top: 20px;
+            top: 120px;
             height: 10px;
             width: 30%;
         }
@@ -347,6 +348,20 @@ body{
                 display: grid;
                 grid-template-columns: 1fr 1fr;
                 gap: 40px;
+                margin-bottom: 20px;
+            }
+            &-title{
+            }
+            &-button{
+                float: right;
+            }
+            &-test{
+                width: 100%;
+                height: 700px;
+                background-color: black;
+                display: flex;
+                align-items: center;
+                justify-content: center;
             }
         }
     }
