projects page init

--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -99,6 +99,7 @@ a{
     // font-family: "Roboto", sans-serif;
     font-style: normal;
     font-weight: $lighter_font_weight;
+    cursor: none;
 }
 
 input[type="email"],
