--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -6,13 +6,13 @@ $secondary_color_3: #f4f4f4;
 $secondary_color_4: #f4f4f4;
 $bg_color: #FFF;
 $fg_color: #000;
-$accent_color: #1f1f1f;
-$accent_color_2: #1f1f1f;
-$accent_color_3: #1f1f1f;
+$accent_color: #1c1c1c;
+$accent_color_2: #1c1c1c;
+$accent_color_3: #1c1c1c;
 // typography
 $big_font_size: 56px;
 $h1_font_size: 36px;
-$h2_font_size: 23px;
+$h2_font_size: 27px;
 $h3_font_size: 19px;
 $h4_font_size: 16px;
 $p_font_size: 16px;
@@ -27,8 +27,8 @@ $lighter_font_weight: 400;
 // margin and padding
 $mb_auto: 0 auto;
 $pd_big: 200px 0;
-$pd_medium: 110px 0;
-$pd_small: 40px 0;
+$pd_medium: 130px 0;
+$pd_small: 60px 0;
 $pd_block: 60px 60px;
 $pd_nav: 40px 0;
 $pd_input: 14px 17px;
@@ -47,6 +47,6 @@ $breakpoint_tablet: 830px;
 $breakpoint_phone: 700px;
 $breakpoint_phone_two: 515px;
 // border radius
-$input_radius: 7px;
+$input_radius: 10px;
 $button_radius: 30px;
 $plate_radius: 13px;
