--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -40,7 +40,7 @@
     & h2 {
         font-size: $h2_font_size;
         font-weight: $medium_font_weight;
-        margin-bottom: 15px;
+        // margin-bottom: 15px;
     }
 
     & h3 {
@@ -71,7 +71,7 @@
     & p{
         font-size: $p_font_size;
         &:nth-last-child(1){
-            margin-top: 15px;
+            // margin-top: 15px;
         }
     }
 
@@ -108,8 +108,6 @@
 button {
     font-size: $button_font_size !important;
     font-weight: $light_font_weight !important;
-    border-radius: $button_radius;
-    cursor: pointer;
     padding: $pd_button;
     display: flex;
     align-items: center;
@@ -117,9 +115,10 @@ button {
     background: transparent;
     // transition: all 0.5s ease;
     &.primary {
-        border: 2px solid $primary_color;
-        background-color: $primary_color;
+        border: 2px solid $accent_color;
+        background-color: $accent_color;
         color: $bg_color;
+    border-radius: $button_radius;
         
 
         & svg{
@@ -140,7 +139,7 @@ button {
         background-color: $bg_color;
         color: $primary_color;
         border: 2px solid $secondary_color_2;
-        
+    border-radius: $button_radius;
 
         & svg{
             margin-left: 10px;
@@ -150,9 +149,9 @@ button {
         }
         // width: 100%;
         &:hover{
-            background-color: $primary_color;
+            background-color: $accent_color;
             color: $bg_color;
-            border: 2px solid $primary_color;
+            border: 2px solid $accent_color;
             & svg{
                 fill: $bg_color !important;
             }
@@ -210,6 +209,8 @@ button {
         flex-direction: column; 
         min-height: 100%;
         display: flex;
+        // pointer-events: none;
+        // z-index: -2;
     }
     &__auth{
         height: 100vh;
@@ -224,7 +225,7 @@ button {
 main{
     flex: 1 0 auto;
     position: relative;
-    z-index: -2;
+    // z-index: -2;
 }
 
 header{
@@ -236,7 +237,6 @@ footer{
 }
 
 .input{
-    margin-top: 7px;
     &__password{
         position: relative;
         & button{
@@ -298,13 +298,13 @@ footer{
             font-size: $p_font_size;
             &:hover{
                 background-color: $accent_color_3;
-                color: $accent_color;
+                color: $bg_color;
                 border: 2px solid $accent_color;
             }
     
             &.active{
                 background-color: $accent_color_3;
-                color: $accent_color;
+                color: $bg_color;
                 border: 2px solid $accent_color;
             }
         }
@@ -320,11 +320,12 @@ footer{
 
     &.secondary{
         & .chip__button{
-            border-radius: 5px;
+            border-radius: 20px;
             padding: 8px 17px;
             transition: all 0.5s ease;
-            font-size: $p2_font_size;
-            background-color: $secondary_color_3;
+            font-size: $p2_font_size !important;
+            // background-color: $secondary_color_3;
+            background-color: rgba(255, 255, 255, 0.6);
             // &:hover{
             //     background-color: $accent_color_2;
             //     color: $bg_color;
@@ -332,8 +333,10 @@ footer{
     
             &.active{
                 border: none;
-                background-color: $accent_color_3;
-                color: $accent_color_2;
+                background-color: $bg_color;
+            }
+            &:hover{
+                background-color: $bg_color;
             }
         }
     }
@@ -366,11 +369,12 @@ hr{
     &__button{
         width: 100%;
         background-color: $bg_color;
-        border: 2px solid $secondary_color_2;
+        border: 1.5px solid $secondary_color_2;
         display: flex;
         justify-content: space-between;
         padding: 12px 20px;
         color: $primary_color !important;
+        border-radius: 10px;
         & svg{
             margin-left: 15px;
             transition: 0.1s ease transform;
@@ -384,7 +388,7 @@ hr{
         cursor: pointer;
         transition: 0.1s ease background-color;
         color: $primary_color;
-        border-radius: 5px;
+        border-radius: 10px;
         &:hover{
             background-color: $secondary_color_3;
         }
@@ -397,21 +401,23 @@ hr{
         visibility: hidden;
         padding: 5px;
         background-color: $bg_color;
-        border: 2px solid $secondary_color_2;
+        border: 1.5px solid $secondary_color_2;
         left: 0;
         right: 0;
         width: 100%;
-        border-radius: $button_radius;
+        border-radius: 10px;
         z-index: $z_tooltip;
         top: 110%;
+        opacity: 0;
         // bottom: -150%;
         // display: grid;
         // grid-template-rows: 0fr;
         // transition: grid-template-rows 0.5s ease-in-out;
-        transition: opacity 0.2s ease;
+        transition: opacity 0.5s ease;
         &.active{
             // grid-template-rows: 1fr;
             visibility:visible;
+            opacity: 1;
         }
         // &__inner{
         //     overflow: hidden;
@@ -441,7 +447,7 @@ hr{
     }
 
     &__slider{
-        overflow-x: scroll;
+        overflow-x: hidden;
         &::-webkit-scrollbar{
             display: none;
         }
@@ -553,4 +559,8 @@ textarea{
 
 .black{
     background-color: #111;
+}
+
+.text-card{
+    padding: 20px;
 }
