--- a/src/styles/_style.scss
+++ b/src/styles/_style.scss
@@ -3,21 +3,21 @@
 @import 'reset';
 
 .notification {
-    // background-color: $bg_color;
-    background: rgba(255, 255, 255, 0.8);
-    padding: 23px;
-    border-radius: 12px;
+    // background-color: $accent_color;
+    background: rgba(0, 0, 0, 0.7);
+    padding: 10px 15px;
+    border-radius: 10px;
     margin-bottom: 20px;
-    width: 400px;
+    width: 250px;
     animation: left 0.4s;
     animation-fill-mode: forwards;
-    
+    // border: 2px solid $accent_color;
     display: flex;
     align-items: center;
     // box-shadow: rgba(0, 0, 0, 0.15) 0px 48px 200px 0px;
     // box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
-    box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
-    // border: 2px solid $primary_color;
+    // box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+    border: 2px solid $primary_color;
     backdrop-filter: saturate(180%) blur(5px);
 
     &__img{
@@ -41,11 +41,18 @@
     &__title {
         margin-bottom: 0px;
     }
+    &__info{
+        color: $bg_color;
+        margin-top: 0;
+        &.info p{
+            margin-top: 0;
+        }
+    }
     &__list {
         position: fixed;
-        bottom: 20px;
-        right: 120px;
-        width: 300px;
+        bottom: 40px;
+        right: 40px;
+        max-width: 450px;
         z-index: 999;
     }
 
@@ -155,6 +162,23 @@
                 border-radius: 50%;
             }
         }
+        &-status{
+            display: flex;
+            gap: 50px;
+            align-items: center;
+            background-color: $accent_color;
+            // color: rgba(255, 255, 255, 0.75);
+            color: $bg_color;
+            padding: 0 20px;
+            line-height: 30px;
+            border-radius:3px;
+            &_circle{
+                width: 13px;
+                height: 13px;
+                background-color: rgb(0, 127, 57);
+                border-radius: 50%;
+            }
+        }
     }
     &__inner{
         display: flex;
@@ -190,7 +214,7 @@
     bottom: 0;
     // transform: translate(-50%);
     position: absolute;
-    z-index: -1;
+    z-index: 0;
     background: radial-gradient(circle, rgb(211, 211, 211) 0%, rgb(234, 234, 234) 23%, rgba(255,255,255,1) 100%);
     // background-color: #202025;
     // background-color: #111;
@@ -265,21 +289,21 @@ body{
     // background-color: #ffffff;
 }
 
-.cursor{
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 10px;
-    aspect-ratio: 1;
-    background: rgba(255, 255, 255, 0.5);
-    border: 2px solid $primary_color;
-    border-radius: 50%;
-    display: none;
-    pointer-events: none;
-    &.active{
-        display: block;
-    }
-}
+// .cursor{
+//     position: fixed;
+//     left: 0;
+//     top: 0;
+//     width: 10px;
+//     aspect-ratio: 1;
+//     background: rgba(255, 255, 255, 0.5);
+//     border: 2px solid $primary_color;
+//     border-radius: 50%;
+//     display: none;
+//     pointer-events: none;
+//     &.active{
+//         display: block;
+//     }
+// }
 
 .translator{
     position: fixed;
@@ -287,6 +311,7 @@ body{
     bottom: 40px;
     background-color: $secondary_color_3;
     border-radius: 30px;
+    z-index: 80;
     &__icon{
         width: 45px;
         height: 45px;
@@ -337,13 +362,13 @@ body{
         &__heading{
             position: sticky;
             left: 0;
-            top: 95px;
+            top: 110px;
             height: 10px;
-            width: 30%;
+            width: 25%;
             bottom: 100px;
         }
         &__content{
-            width: 70%;
+            width: 75%;
             &-stats{
                 margin-top: 30px;
                 width: 100%;
@@ -356,6 +381,10 @@ body{
                 &_number{
                     font-weight: $bold_font_weight;
                     margin-bottom: 10px;
+                    & svg{
+                        width: 50px;
+                        height: 50px;
+                    }
                     & span{
                         font-size: $h1_font_size;
                     }
@@ -395,9 +424,23 @@ body{
 .project-card{
     &__visual{
         margin-bottom: 10px;
+        position: relative;
+        // display: flex;
+        // align-items: center;
+        // justify-content: center;
+        // aspect-ratio: 1.5 / 1;
+        // width: 100%;
+        // height: 1px;
         & video{
+            // position: absolute;
+            left: 0;
+            top: 0;
+            object-fit: cover;
             width: 100%;
+            aspect-ratio: 1.5 /1;
             border-radius: 15px;
+            background-color: $secondary_color_2;
+
         }
     }
     &__content{
@@ -407,10 +450,10 @@ body{
 
 .blog-card{
     position: relative;
-    height: 450px;
+    aspect-ratio: 1/1.5;
     border-radius: 25px;
     overflow: hidden;
-    padding: 20px;
+    padding: 30px 20px;
     &__visual{
         position: absolute;
         left: 0;
@@ -419,11 +462,27 @@ body{
         height: 100%;
         z-index: -2;
     }
+    &__bottom{
+        opacity: 0;
+        transition: 0.4s ease;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: flex-start;
     &__title{
         color: $bg_color;
+    }
+    &__info{
+        color: $bg_color;
+    }
+    &__chips{
+        display: flex;
+        gap: 10px;
+        flex-wrap: wrap;
     }
     &::before{
         content: '';
@@ -432,13 +491,26 @@ body{
         top: 0;
         width: 100%;
         height: 100%;
-        background: linear-gradient(to top,  rgba(0, 0, 0, 1)  0%, rgba(255, 255, 255, 0) 100%);
+        // background: linear-gradient(to bottom,  rgba(0, 0, 0, 1)  0%, rgba(0, 0, 0, 1) 40%, rgba(255, 255, 255, 0) 100%);
+        background-color: rgba(0, 0, 0, 0.7);
         z-index: -1;
         transition: 0.5s ease;
+        opacity: 0;
     }
     &:hover{
         &::before{
             opacity: 0.5;
+        }
+        & .blog-card__bottom{
+            opacity: 1;
+        }
+    }
+    &.show{
+        &::before{
+            opacity: 0.5;
+        }
+        & .blog-card__bottom{
+            opacity: 1;
         }
     }
 }
@@ -460,10 +532,11 @@ body{
         }
         &-visual{
             position: absolute;
-            right: 0;
+            right: 0%;
             top: 0;
             height: 100%;
             width: 50%;
+            z-index: -1;
         }
     }
 }
@@ -543,7 +616,7 @@ body{
 
 .skills{
     position: relative;
-    background-color: #1c1c1c;
+    background-color: $accent_color;
     &__list{
         margin-top: 60px;
     }
@@ -605,7 +678,7 @@ body{
             display: flex;
             align-items: center;
             justify-content: center;
-            background-color: #111;
+            background-color: $accent_color;
             position: absolute;
             left: 0;
             top: 0;
@@ -790,12 +863,8 @@ body{
 }
 
 .gallery{
-    background-image: url('/images/background.png');
+    // background-image: url('/images/background.png');
     &__inner{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
     }
     &__info{
         &.info{
@@ -804,24 +873,278 @@ body{
             }
         }
     }
+    &__title{
+        &.title{
+            color: $bg_color;
+            & h2{
+            margin-bottom: 0;
+
+            }
+        }
+    }
     &__visual{
+        width: 100%;
+    }
+    &__blogs{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 15px;
+        margin-top: 40px;
+    }
+    &__blog{
+        transition: 0.5s ease;
+        overflow: hidden;
+        aspect-ratio: 1.5/1;
+    }
+    &__content{
+    }
+    &__banner{
+        width: 100%;
+        // background-color: $primary_color;
+        border-radius: 30px;
+        padding: 70px 40px 40px 40px;
+        display: flex;
+        flex-direction: column;
+        gap: 60px;
+        background: url('/images/blog__banner.png');
+        background-repeat: no-repeat;
+        background-size: cover;
+        // background-position: center;
+        opacity: 0;
+        transition: 0.7s ease;
+        transform: translateY(50px);
+        &.active{
+            opacity: 1;
+            transform: translateY(0);
+        }
+    }
+    &__filters{
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        flex-wrap: row;
+    }
+    &__list{
+        margin-top: 40px;
+    }
+}
+
+.projects{
+    &__inner{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    &__left{
+        width: 40%;
+    }
+    &__right{
+        width: 40%;
+    }
+    &__visual{
+        gap: 20px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        &-img{
+            width: 100%;
+            aspect-ratio: 1;
+            border-radius: 10px;
+            overflow: hidden;
+            background-color: $secondary_color;
+            transition: 0.3s ease;
+            & img{
+                width: 100%;
+                height: 100%;
+                transition: 0.5s ease-in-out;
+            }
+            &:hover{
+                & img{
+                    // transform: scale(1.1);
+                }
+            }
+            &.active{
+                box-shadow: 0px 0px 0px 3px $accent_color;
+                & img{
+                    // transform: scale(1.1);
+                }
+            }
+        }
+    }
+}
+
+.portfolio{
+    &__list{
+        margin-top: 40px;
+        &-items{
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            gap: 20px;
+        }
+        &-filter{
+            width: 100%;
+            margin-bottom: 20px;
+            display: flex;
+            gap: 10px;
+            align-items: center;
+            &_search{
+                width: 60%;
+            }
+            &_select{
+                width: 20%;
+            }
+        }
+        &-chips{
+            width: 100%;
+            display: flex;
+            align-items: center;
+            flex-wrap: wrap;
+            gap: 20px;
+        }
+    }
+}
+
+.contact{
+    &__inner{
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        justify-content: center;
+        align-items: center;
+    }
+    &__content{
+        text-align: center;
+        padding: 0 40px;
+    }
+    &__title{
+        margin-bottom: 30px;
+    }
+    &__info{
+        &.info{
+            color: $secondary_color;
+        }
+    }
+    &__container{
         display: flex;
         justify-content: space-between;
-        align-items: center;
         width: 100%;
-        // height: 500px;
-
-        &-slider{
+        padding-top: 50px;
+    }
+    &__form{
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+        &-inputs{
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 20px;
+        }
+        &-input{
             width: 100%;
-            height: 100%;
+            & .input{
+                margin-top: 10px;
+            }
+            & textarea{
+                margin-top: 10px;
+                min-height: 200px;
+                resize: vertical;
+            }
         }
+    }
+    &__social{
+        width: 40%;
+        &-links{
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            align-items: center;
+        }
+        &-link{
+            padding: 17px;
+            border: 1px solid $secondary_color_2;
+            border-radius: $input_radius;
+            transition: 0.5s ease;
+            & img{
+                width: 40px;
+                height: 40px;
+                filter: grayscale(100%);
+                transition: 0.5s ease;
+            }
+            &:hover{
+                border: 1px solid $accent_color;
+                & img{
+                    filter: grayscale(0%);
+                }
+                box-shadow: 0px 0px 0px 3px $accent_color;
+            }
+        }
+    }
+}
 
-        & ::-webkit-scrollbar{
-            display: none !important;
+.not-found{
+    text-align: center;
+    &__inner{
+        margin-top: 25%;
+        transform: translateY(-25%);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 40px;
+    }
+    &__content{
+        // padding: 0 140px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 20px;
+        width: 70%;
+    }
+    &__visual{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+        &-digit{
+            font-size: 20vh;
+            color: $accent_color;
         }
-        &-item{
-            border-radius: 20px;
-            overflow: hidden;
+        &-circle{
+            height: 20vh;
+            aspect-ratio: 1/1;
+            border-radius: 50%;
+            background-color: $accent_color;
         }
+    }
+    & a{
+        text-decoration: underline;
+    }
+}
+
+.cursor{
+    position: fixed;
+    width: 15px;
+    height: 15px;
+    border: 2px solid $accent_color;
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
+    pointer-events: none;
+    z-index: 999;
+    transition: width 0.2s ease, height 0.2s ease;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    &.color{
+        border: 2px solid $bg_color;
+    }
+    &.pointer{
+        width: 25px;
+        height: 25px;
+    }
+    &.clicked{
+        width: 30px;
+        height: 30px;
     }
 }
