--- a/src/styles/_style.scss
+++ b/src/styles/_style.scss
@@ -171,7 +171,7 @@
             color: $bg_color;
             padding: 0 20px;
             line-height: 30px;
-            border-radius:3px;
+            border-radius:5px;
             &_circle{
                 width: 13px;
                 height: 13px;
@@ -239,7 +239,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        height: 100vh;
+        min-height: 100vh;
     }
     &__button{
         pointer-events: auto;
@@ -248,7 +248,10 @@
         width: 120px;
         margin:20px auto;
         & svg{
+            position: relative;
             & path{
+                z-index: 1;
+                position: absolute;
                 stroke-dasharray: 400%;
                 stroke-dashoffset: 0;
                 animation: dash 2s alternate linear;
@@ -406,6 +409,7 @@ body{
             }
             &-info{
                 color: $secondary_color;
+                margin-top: 20px;
             }
             &-button{
                 float: right;
@@ -535,8 +539,11 @@ body{
             right: 0%;
             top: 0;
             height: 100%;
-            width: 50%;
+            width: 100%;
             z-index: -1;
+        }
+        &-info{
+            margin-top: 20px;
         }
     }
 }
@@ -548,6 +555,7 @@ body{
         display: flex;
         align-items: center;
         justify-content: space-between;
+        min-height: 100vh;
     }
     &__visual{
         width: 30%;
@@ -794,7 +802,7 @@ body{
         padding: $pd_nav;
         display: flex;
         flex-direction: column;
-        gap: 5px;
+        gap: 15px;
     }
     &__upper{
         display: flex;
@@ -929,50 +937,53 @@ body{
     }
 }
 
-.projects{
-    &__inner{
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
-    &__left{
-        width: 40%;
-    }
-    &__right{
-        width: 40%;
-    }
-    &__visual{
-        gap: 20px;
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        &-img{
-            width: 100%;
-            aspect-ratio: 1;
-            border-radius: 10px;
-            overflow: hidden;
-            background-color: $secondary_color;
-            transition: 0.3s ease;
-            & img{
-                width: 100%;
-                height: 100%;
-                transition: 0.5s ease-in-out;
-            }
-            &:hover{
-                & img{
-                    // transform: scale(1.1);
-                }
-            }
-            &.active{
-                box-shadow: 0px 0px 0px 3px $accent_color;
-                & img{
-                    // transform: scale(1.1);
-                }
-            }
-        }
-    }
-}
+// .projects{
+//     &__inner{
+//         display: flex;
+//         align-items: center;
+//         justify-content: space-between;
+//     }
+//     &__left{
+//         width: 40%;
+//     }
+//     &__right{
+//         width: 40%;
+//     }
+//     &__visual{
+//         gap: 20px;
+//         display: grid;
+//         grid-template-columns: 1fr 1fr 1fr;
+//         &-img{
+//             width: 100%;
+//             aspect-ratio: 1;
+//             border-radius: 10px;
+//             overflow: hidden;
+//             background-color: $secondary_color;
+//             transition: 0.3s ease;
+//             & img{
+//                 width: 100%;
+//                 height: 100%;
+//                 transition: 0.5s ease-in-out;
+//             }
+//             &:hover{
+//                 & img{
+//                     // transform: scale(1.1);
+//                 }
+//             }
+//             &.active{
+//                 box-shadow: 0px 0px 0px 3px $accent_color;
+//                 & img{
+//                     // transform: scale(1.1);
+//                 }
+//             }
+//         }
+//     }
+// }
 
-.portfolio{
+.projects{
+    // border-left: 10px solid rgba(0, 0, 0, 0.7);
+    // border-right: 10px solid $secondary_color;
+    // box-shadow: inset 35px 0px 50px -30px rgba(0, 0, 0, 0.7), inset -35px 0px 50px -30px rgba(0, 0, 0, 0.7);
     &__list{
         margin-top: 40px;
         &-items{
