--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -296,6 +296,7 @@ footer{
             padding: 6px 15px;
             transition: all 0.5s ease;
             font-size: $p_font_size;
+            background-color: $bg_color;
             &:hover{
                 background-color: $accent_color_3;
                 color: $bg_color;
