--- a/src/styles/_style.scss
+++ b/src/styles/_style.scss
@@ -1123,10 +1123,14 @@ body{
             color: $accent_color;
         }
         &-circle{
-            height: 20vh;
             aspect-ratio: 1/1;
             border-radius: 50%;
             background-color: $accent_color;
+            overflow: hidden;
+            & canvas{
+                
+                width: 180px;
+            }
         }
     }
     & a{
@@ -1154,8 +1158,54 @@ body{
         width: 25px;
         height: 25px;
     }
+    &.card{
+        border: 2px solid $bg_color;
+        mix-blend-mode: exclusion;
+    }
     &.clicked{
         width: 30px;
         height: 30px;
+    }
+}
+
+.project{
+    &__inner{
+        position: relative;
+    }
+    &__video{
+        width: 100%;
+        overflow: hidden;
+        height: 600px;
+        & video{
+            position: absolute;
+            width: 100%;
+            z-index: -1;
+            border-bottom-left-radius: 30px;
+            border-bottom-right-radius: 30px;
+        }
+    }
+    &__picture{
+        position: relative;
+        width: 100%;
+        height: 500px;
+        & img{
+            // position: absolute;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+    &__content{
+        background-color: $bg_color;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        padding: 30px 0;
+    }
+    &__tags{
+        display: flex;
+        align-items: center;
+        gap: 15px;
+        flex-wrap: wrap;
     }
 }
