--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -236,3 +236,24 @@ a:-webkit-any-link {
 button[type="submit"]{
     border-radius: $input_radius;
 }
+.video{
+    filter: grayscale(0%);
+    position: relative;
+    &.paused{
+        filter: grayscale(100%);
+    }
+    &__paused{
+        position: absolute;
+        width: 50px;
+        height: 50px;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        & svg{
+            fill: rgba(255, 255, 255, 0.6);
+        }
+    }
+}
