--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -147,7 +147,7 @@ input[type="search"] {
     width: 100%;
     // background: $secondary_color_3;
     padding: 12px 20px;
-    border-radius: 10px;
+    border-radius: 12px;
     appearance: none; //for iOS input[type="search"] roundedness issue. border-radius alone doesn't work
     transition: all 0.4s ease;
     z-index: 1;
@@ -240,7 +240,16 @@ button[type="submit"]{
     filter: grayscale(0%);
     position: relative;
     &.paused{
-        filter: grayscale(100%);
+        // filter: grayscale(100%);
+    }
+    &__loading{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        animation: skeleton-loading 1s linear infinite alternate;
+        border-radius: 30px;
     }
     &__paused{
         position: absolute;
@@ -254,6 +263,26 @@ button[type="submit"]{
         justify-content: center;
         & svg{
             fill: rgba(255, 255, 255, 0.6);
+            & g{
+                height: 50px;
+                width: 50px;
+            }
+            & path{
+                height: 50px;
+                width: 50px;
+                stroke: $secondary_color;
+                stroke-width: 50px;
+            }
         }
     }
 }
+
+@keyframes skeleton-loading {
+    0% {
+      background-color: hsl(0, 0%, 81%);
+    }
+    100% {
+      background-color: hsl(0, 0%, 95%);
+    }
+  }
+  
