--- a/src/styles/_style.scss
+++ b/src/styles/_style.scss
@@ -215,10 +215,11 @@
     // transform: translate(-50%);
     position: absolute;
     z-index: 0;
-    background: radial-gradient(circle, rgb(211, 211, 211) 0%, rgb(234, 234, 234) 23%, rgba(255,255,255,1) 100%);
+    background: radial-gradient(circle, rgb(237, 237, 237) 0%, rgb(242, 242, 242) 23%, rgba(255,255,255,1) 100%);    
+    
     // background-color: #202025;
     // background-color: #111;
-    // background-color: $bg_color;
+    background-color: $bg_color;
     &__inner{
         opacity: 0.99;
         // background-color:rgb(200, 255, 238);
@@ -991,7 +992,7 @@ body{
     // border-right: 10px solid $secondary_color;
     // box-shadow: inset 35px 0px 50px -30px rgba(0, 0, 0, 0.7), inset -35px 0px 50px -30px rgba(0, 0, 0, 0.7);
     &__list{
-        margin-top: 40px;
+        margin-top: 20px;
         &-items{
             display: grid;
             grid-template-columns: 1fr 1fr 1fr;
@@ -1004,7 +1005,7 @@ body{
             gap: 10px;
             align-items: center;
             &_search{
-                width: 60%;
+                width: 80%;
             }
             &_select{
                 width: 20%;
@@ -1017,6 +1018,35 @@ body{
             flex-wrap: wrap;
             gap: 20px;
         }
+    }
+    &__title{
+        color: $bg_color;
+    }
+    &__banner{
+        width: 100%;
+        // background-color: $primary_color;
+        border-radius: 25px;
+        padding: 70px 40px 40px 40px;
+        display: flex;
+        flex-direction: column;
+        gap: 60px;
+        background: url('/images/blog__banner.png');
+        background-repeat: no-repeat;
+        background-size: cover;
+        // background-position: center;
+        opacity: 0;
+        transition: 0.7s ease;
+        transform: translateY(50px);
+        &.active{
+            opacity: 1;
+            transform: translateY(0);
+        }
+    }
+    &__filters{
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        flex-wrap: row;
     }
 }
 
@@ -1085,7 +1115,7 @@ body{
             & img{
                 width: 40px;
                 height: 40px;
-                filter: grayscale(100%);
+                // filter: grayscale(100%);
                 transition: 0.5s ease;
             }
             &:hover{
@@ -1186,15 +1216,15 @@ body{
         & video{
             width: 100%;
             border-radius: 30px;
+        border: 1px solid $secondary_color_2;
         }
     }
     &__header{
         background-color: $bg_color;
+        padding: 50px 0;
         display: flex;
         flex-direction: column;
-        gap: 10px;
-        padding: 30px 0;
-        align-items: flex-start;
+        gap: 15px;
     }
     &__block{
         display: flex;
@@ -1217,9 +1247,14 @@ body{
             display:inline-block;    
             column-count: 2;    
             column-gap: 15px; 
+            &.pictures{
+                & .project__block-image{
+                    filter: grayscale(0%);
+                }
+            }
         }
         &-image{
-            border: 2px solid $primary_color;
+            border: 1px solid $secondary_color_2;
             width: 100%;
             height: auto;
             border-radius: 10px;
@@ -1238,6 +1273,30 @@ body{
         margin-top: 40px;
         display: flex;
         flex-direction: column;
-        gap: 40px;
+        gap: 80px;
+    }
+}
+
+.skeleton{
+    &__project{
+        &-visual{
+            animation: skeleton-loading 1s linear infinite alternate;
+            aspect-ratio: 1.5 /1;
+            margin-bottom: 10px;
+            border-radius:  15px;
+        }
+        // &-content{
+        //     padding: 8px;
+        // }
+        &-title{
+            animation: skeleton-loading 1s linear infinite alternate;
+            height: 20px;
+            border-radius: 7px;
+        }
+        &-info{
+            animation: skeleton-loading 1s linear infinite alternate;
+            height: 40px;
+            border-radius: 7px;
+        }
     }
 }
