--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -292,20 +292,20 @@ footer{
     &.primary {
         & .chip__button{
             border: 2px solid $secondary_color_2;
-            border-radius: 40px;
+            border-radius: 10px;
             padding: 6px 15px;
             transition: all 0.5s ease;
             font-size: $p_font_size;
             background-color: $bg_color;
             &:hover{
-                background-color: $accent_color_3;
-                color: $bg_color;
+                background-color: rgba(0, 0, 0, 0.57);
+                color: $accent_color;
                 border: 2px solid $accent_color;
             }
     
             &.active{
-                background-color: $accent_color_3;
-                color: $bg_color;
+                background-color: rgba(0, 0, 0, 0.57);
+                color: $accent_color;
                 border: 2px solid $accent_color;
             }
         }
@@ -341,6 +341,39 @@ footer{
             }
         }
     }
+
+
+    &.skeleton {
+        & .chip__button{
+            animation: skeleton-loading 1s linear infinite alternate;
+            border: 2px solid transparent;
+            border-radius: 10px;
+            padding: 6px 15px;
+            transition: all 0.5s ease;
+            font-size: $p_font_size;
+            width: 100px;
+            color: transparent;
+            &:hover{
+                background-color: inherit;
+                color: transparent;
+                border: 2px solid transparent;
+            }
+    
+            &.active{
+                background-color: inherit;
+                color: transparent;
+                border: 2px solid transparent;
+            }
+        }
+
+        // &.img{
+        //     & .chip__button{
+        //         padding: 15px;
+        //         border-radius: 50%;
+        //         line
+        //     }
+        // }
+    }
 }
 
 hr{
@@ -366,16 +399,16 @@ hr{
 
 .select{
     position: relative;
-    min-width: 145px;
+    min-width: 170px;
     &__button{
         width: 100%;
         background-color: $bg_color;
-        border: 1.5px solid $secondary_color_2;
+        border: 2px solid $secondary_color_2;
         display: flex;
         justify-content: space-between;
         padding: 12px 20px;
         color: $primary_color !important;
-        border-radius: 12px;
+        border-radius: 10px;
         & svg{
             margin-left: 15px;
             transition: 0.1s ease transform;
@@ -389,7 +422,7 @@ hr{
         cursor: pointer;
         transition: 0.1s ease background-color;
         color: $primary_color;
-        border-radius: 12px;
+        border-radius: 10px;
         &:hover{
             background-color: $secondary_color_3;
         }
@@ -402,7 +435,7 @@ hr{
         visibility: hidden;
         padding: 5px;
         background-color: $bg_color;
-        border: 1.5px solid $secondary_color_2;
+        border: 2px solid $secondary_color_2;
         left: 0;
         right: 0;
         width: 100%;
